# python-uv-template

./: pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: pyright.yml  release.yml  ruff.yml
